src/test/resources/delivery2/expressions/invalid/semantic/relational/comparingIntAndQuote.pas
program Demo;
var
  x, y, z : integer;
  a : boolean;
begin
    a := 100 > 'abc';
    writeln(a)
end.